# Robotics_LLM_Controller

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.openai.yaml  config.yaml  pyproject.toml  tt.py  ttt.ipynb
aliengo/: actionlog.py  cli.py  config.py  runtime.py  server.py
aliengo/agent/: llm.py  loop.py
aliengo/robot/: interface.py  jetracer.py  mock.py  result.py
aliengo/safety/: estop.py  validator.py
aliengo/skills/: definitions.py  registry.py
aliengo/speech/: stt.py
aliengo/vision/: detector.py
aliengo/web/: __init__.py  app.py
aliengo/web/static/: app.css  app.js  index.html
prompts/: system_prompt.md
scripts/: evaluate.py  spike_toolcall.py
tests/: eval_commands.json  regression_commands.md  test_agent_loop.py  test_jetracer_import.py  test_mock_robot.py  test_runtime.py  test_safety.py  test_server.py  test_skills.py  test_speech_and_eval.py
