[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aliengo-llm"
version = "0.1.0"
description = "Local LLM intelligence stack for the AlienGo robot dog (mock-first)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aliengo = "aliengo.cli:main"

[tool.setuptools.packages.find]
include = ["aliengo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
