[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aliengo-llm"
version = "0.1.0"
description = "Local LLM intelligence stack for the AlienGo robot dog (mock-first)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.5",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "av>=14.0",
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

# NOTE: the JetRacer backend (aliengo/robot/jetracer.py) needs `jetracer`,
# `jetson-inference`, and `jetcam`. These are Jetson-only (ARM + CUDA) and are
# NOT installable on the Windows/PC dev box — do not add them here or `uv sync`
# will break. Install them on the Jetson via its own system/JetPack packages.

# uv installs the dev group by default on sync/run, so pytest and the
# notebook kernel stop getting uninstalled by plain `uv sync`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "httpx>=0.28",
]

[project.scripts]
aliengo = "aliengo.cli:main"
aliengo-server = "aliengo.server:main"

[tool.setuptools.packages.find]
include = ["aliengo*"]

[tool.setuptools.package-data]
"aliengo.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
